--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,8 @@
 :root {
   --black: #000000;
   --darkgray: #272727;
-  --red: #c7493aff;
-  --darkred: #a33327ff;
+  --red: #dc2626;
+  --darkred: #991b1b;
   --green: #689775ff;
   --lttan: #ad8174ff;
   --transpBlack: rgba(0, 0, 0, 0.815);
@@ -45,8 +45,10 @@ header {
 }
 
 #doggie {
-  width: 100%;
-  height: 100%;
+  height: 50rem;
+  width: 50rem;
+  min-height: 25rem;
+  min-width: 25rem;
   position: relative;
   display: flex;
   align-items: center;
@@ -110,11 +112,7 @@ section {
 }
 
 .btn {
-  background-color: var(--darkred);
-  color: white;
-  font-size: 1.3rem;
   font-family: "Montserrat", helvetica, arial, sans-serif;
-  /* text-decoration: none; */
   padding: 6px 5px;
   width: 100%;
   display: block;
@@ -122,20 +120,15 @@ section {
   border-radius: 5px;
   border: none;
   outline: none;
-  /* box-shadow: 3px 3px var(--dark); */
   transform: translate(-1px, -1px);
   cursor: pointer;
 }
 
-.btn:hover {
-  background-color: var(--red);
-  font-weight: bold;
-}
 
 .movie-history li {
   background-color: var(--darkred);
   color: white;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   text-decoration: none;
   padding: 6px 5px;
   width: 100%;
